<resources>
    <string name="app_name">天赋智能钢琴</string>


    <string name="main_songbook">曲库</string>
    <string name="main_course">教程</string>
    <string name="main_mine">我的</string>

    <string name="system_permission_limit">系统权限受限</string>


    <!--登陆注册-->
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_input_mobile">输入手机号</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="hint_input_new_password">新密码(由8-20位字符、数字、字母组成)</string>
    <string name="hint_input_password_again">确认密码</string>
    <string name="confirm">确定</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="user_agreement">《XX用户注册协议》</string>
    <string name="password">密码</string>
    <string name="mainland">大陆</string>
    <string name="send_again">重新发送</string>


    <!--我的-->
    <string name="edit_person_info">编辑个人资料</string>
    <string name="update_password">修改密码</string>
    <string name="update_portrait">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="not_set">未设置</string>
    <string name="clean_cache_date">清除缓存数据</string>


    <string name="uploader">上传者：%s</string>


    <!--反馈-->
    <string name="question_type">问题类型</string>
    <string name="hint_feedback">请填写反馈内容，10-100字</string>
    <string name="feedback">反馈</string>
    <string name="feedback_success">反馈成功</string>
    <string name="submit">提交</string>

    <!--关于-->
    <string name="about">关于</string>
    <string name="current_version">当前版本v%s</string>
    <string name="agreement">用户协议</string>

</resources>
