<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_white" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/mainland"
            android:textColor="@color/color_title"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_input_mobile"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/color_title"
            android:textColorHint="@color/color_content"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_verify"
            android:layout_width="293dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:textColor="@color/color_title"
            android:textColorHint="@color/color_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_send_verify"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_verify"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_input_new_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/color_title"
        android:textColorHint="@color/color_content"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_input_password_again"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/color_title"
        android:textColorHint="@color/color_content"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            style="@style/CustomCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/read_and_agree"
            android:textColor="@color/color_content"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/color_theme"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_confirm"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>